# GitAutoTools

./: .gitignore  README.md  pyproject.toml
auto_stash/: stash_watcher.py
src/auto_stash/: cli.py  stash_watcher.py
