[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-auto-stash"
version = "0.1.0"
description = "Watch a repo and auto-stash changes safely"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="Your Name"}]

[project.scripts]
auto-stash = "auto_stash.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]